# docs/swagger.json
@@ -146,7 +146,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializers.ListOrderRes"
+                            "$ref": "#/definitions/dto.ListOrderRes"
                         }
                     }
                 }
@@ -171,7 +171,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/serializers.PlaceOrderReq"
+                            "$ref": "#/definitions/dto.PlaceOrderReq"
                         }
                     }
                 ],
@@ -179,7 +179,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializers.Order"
+                            "$ref": "#/definitions/dto.Order"
                         }
                     }
                 }
@@ -212,7 +212,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializers.Order"
+                            "$ref": "#/definitions/dto.Order"
                         }
                     }
                 }
@@ -290,7 +290,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Product"
+                            "$ref": "#/definitions/goshop_internal_product_dto.Product"
                         }
                     }
                 }
@@ -318,7 +318,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Product"
+                            "$ref": "#/definitions/goshop_internal_product_dto.Product"
                         }
                     }
                 }
@@ -358,7 +358,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.Product"
+                            "$ref": "#/definitions/goshop_internal_product_dto.Product"
                         }
                     }
                 }
@@ -511,6 +511,20 @@
                 }
             }
         },
+        "dto.ListOrderRes": {
+            "type": "object",
+            "properties": {
+                "orders": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.Order"
+                    }
+                },
+                "pagination": {
+                    "$ref": "#/definitions/paging.Pagination"
+                }
+            }
+        },
         "dto.ListProductRes": {
             "type": "object",
             "properties": {
@@ -520,7 +534,7 @@
                 "products": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.Product"
+                        "$ref": "#/definitions/goshop_internal_product_dto.Product"
                     }
                 }
             }
@@ -554,31 +568,73 @@
                 }
             }
         },
-        "dto.Product": {
+        "dto.Order": {
             "type": "object",
             "properties": {
-                "active": {
-                    "type": "boolean"
-                },
                 "code": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "description": {
                     "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
-                "name": {
+                "lines": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.OrderLine"
+                    }
+                },
+                "status": {
                     "type": "string"
                 },
+                "total_price": {
+                    "type": "number"
+                }
+            }
+        },
+        "dto.OrderLine": {
+            "type": "object",
+            "properties": {
                 "price": {
                     "type": "number"
                 },
-                "updated_at": {
+                "product": {
+                    "$ref": "#/definitions/goshop_internal_order_dto.Product"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.PlaceOrderLineReq": {
+            "type": "object",
+            "required": [
+                "product_id",
+                "quantity"
+            ],
+            "properties": {
+                "product_id": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.PlaceOrderReq": {
+            "type": "object",
+            "required": [
+                "lines",
+                "user_id"
+            ],
+            "properties": {
+                "lines": {
+                    "type": "array",
+                    "maxItems": 5,
+                    "items": {
+                        "$ref": "#/definitions/dto.PlaceOrderLineReq"
+                    }
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
@@ -632,6 +688,52 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "goshop_internal_order_dto.Product": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                }
+            }
+        },
+        "goshop_internal_product_dto.Product": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "code": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
                 },
                 "updated_at": {
                     "type": "string"
